; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/daisy/extr_daisy.c_led_set_kb.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/daisy/extr_daisy.c_led_set_kb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@USB_LED_CAPS_LOCK = common dso_local global i32 0, align 4
@PC6 = common dso_local global i32 0, align 4
@DDRC = common dso_local global i32 0, align 4
@PORTC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @led_set_kb(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @USB_LED_CAPS_LOCK, align 4
  %5 = shl i32 1, %4
  %6 = and i32 %3, %5
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %18

8:                                                ; preds = %1
  %9 = load i32, i32* @PC6, align 4
  %10 = shl i32 1, %9
  %11 = load i32, i32* @DDRC, align 4
  %12 = or i32 %11, %10
  store i32 %12, i32* @DDRC, align 4
  %13 = load i32, i32* @PC6, align 4
  %14 = shl i32 1, %13
  %15 = xor i32 %14, -1
  %16 = load i32, i32* @PORTC, align 4
  %17 = and i32 %16, %15
  store i32 %17, i32* @PORTC, align 4
  br label %29

18:                                               ; preds = %1
  %19 = load i32, i32* @PC6, align 4
  %20 = shl i32 1, %19
  %21 = xor i32 %20, -1
  %22 = load i32, i32* @DDRC, align 4
  %23 = and i32 %22, %21
  store i32 %23, i32* @DDRC, align 4
  %24 = load i32, i32* @PC6, align 4
  %25 = shl i32 1, %24
  %26 = xor i32 %25, -1
  %27 = load i32, i32* @PORTC, align 4
  %28 = and i32 %27, %26
  store i32 %28, i32* @PORTC, align 4
  br label %29

29:                                               ; preds = %18, %8
  %30 = load i32, i32* %2, align 4
  %31 = call i32 @led_set_user(i32 %30)
  ret void
}

declare dso_local i32 @led_set_user(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
